fix another too dark border

--- a/app/styles/app/layouts/requests.sass
+++ b/app/styles/app/layouts/requests.sass
@@ -34,7 +34,7 @@
   .requests-time
     @media #{$medium-up}
       padding-left: 2em
-      border-left: 1px solid $grey-lighter
+      border-left: 1px solid $cream-dark
 
   .tile--jobs
     padding-left: 2.5em
